[tool.poetry]
name = "wooordhunt-parser"
version = "0.4.1"
description = ""
authors = ["Sustavov Maksim <maksim.sustavov@edgecenter.ru>"]
readme = "README.md"

[tool.poetry.urls]
Homepage = "https://github.com/Maksonik/parser_WooordHunt"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
ruff = "^0.8.6"
httpx = "^0.28.1"
setuptools = "^75.8.0"
pytest-asyncio = "^0.25.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-vcr = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true